# Rocky

./: .gitignore  MEMORY.md  README.md  config.yaml  pyproject.toml  run.py
.memory/: .dispatch_version  CONSTITUTION.md  REGRESSION_LOG.md  UNDO_LOG.md  index.md  learned_patterns.md  project_state.md  shared_state.json  system_paths.md  trace_20260603_170125.jsonl  trace_20260603_194606.jsonl  trace_20260603_200400.jsonl  trace_20260603_203517.jsonl  trace_20260603_204001.jsonl  trace_20260603_204030.jsonl  user_prefs.md
rocky/: __init__.py  config.py  main.py  schemas.py
rocky/engine/: __init__.py  circuit_breaker.py  llm_client.py  model_manager.py  prompt_builder.py  thermal_monitor.py
rocky/hermes/: __init__.py  git_sync.py  learner.py  reflector.py
rocky/memory/: __init__.py  constitution.py  session.py  shared_state.py  store.py
rocky/skills/: __init__.py  executor.py  loader.py  manager.py  regression.py
rocky/supervisor/: __init__.py  dispatcher.py
rocky/tools/: __init__.py  code_exec.py  file_ops.py  registry.py  shell.py  web.py
rocky/workers/: __init__.py  base.py  coder.py  reasoner.py  writer.py
scripts/: detect_hardware.py  rebuild_index.py  test_skills.py  update_constitution.py
skills/: example_skill.md
