[project]
name = "rocky"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.5.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "instructor>=1.0",
    "gitpython>=3.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.scripts]
rocky = "rocky.main:cli"

[tool.setuptools.packages.find]
include = ["rocky*"]
